--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ android-targetSdk = "36"
 
 android = "8.13.0" # https://kotlinlang.org/docs/multiplatform-compatibility-guide.html#version-compatibility
 kotlin = "2.3.0"
+maven-publish = "0.36.0"
 
 compose = "1.10.0"
 
@@ -11,6 +12,8 @@ compose = "1.10.0"
 android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "android" }
 
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+
+maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "maven-publish" }
 
 [libraries]
 compose-foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "compose" }
